<resources>
    <string name="app_name">AntiVirus</string>
    <string name="off">Off</string>
    <string name="alert">alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="help_preference">Help</string>
    <string name="version">Version</string>
    <string name="title_scan_freq_preference">Auto-Scan Frequency</string>
    <string name="title_help_preference">Online Help</string>
    <string name="summary_intent_preference">Get help at www.avgmobilation.com</string>
    <string name="dialog_title_freq_preference">Select frequency</string>
    <string name="your_content_is_clean">"No infections found.

"</string>
    <string name="invalid_mail">"Oops! You've entered an invalid Google account.
Please try again."</string>
    <string name="join_group">Registering...</string>
    <string name="please_wait">Please wait</string>
    <string name="scan">Scan</string>
    <string name="fix_not_available">Sorry, this setting cannot be changed. For help, see www.avgmobilation.com.</string>
    <string name="update_now">Update Now</string>
    <string name="text_messages">Scan Text Messages</string>
    <string name="settings_auto_fix_messages">Scan text messages in real time</string>
    <string name="settings_updating_database">Updating...</string>
    <string name="update_complete">"Successfully updated!
Version:"</string>
    <string name="update_database">[appname] Update</string>
    <string name="remote_management">Anti-Theft</string>
    <string name="install_package_bad_pre">"Installed package:
"</string>
    <string name="install_package_bad_post">"
is infected."</string>
    <string name="scan_results_packages">Apps</string>
    <string name="settings">Settings</string>
    <string name="content">Content</string>
    <string name="media">Media</string>
    <string name="scanning">Scanning...</string>
    <string name="suspicious_message_was_found">"Suspicious text message found.
"</string>
    <string name="suspicious_messages_were_found">"Suspicious text messages found.
"</string>
    <string name="scan_packages_result_clean">"Your apps contain no security threats.

"</string>
    <string name="scan_result_settings_ok">"Device settings are secured.

"</string>
    <string name="scan_result_settings_root">"Unsecure privilege mode detected.
Your device is running in High Privilege mode (i.e., it has been rooted).
We recommend using only genuine firmware.

For more info, please see our FAQs at www.avgmobilation.com.

"</string>
    <string name="title_language_preference">Language</string>
    <string name="ignore">Ignore</string>
    <string name="tos">Terms of Service</string>
    <string name="tos_summary">Review our Terms of Service</string>
    <string name="message">Message</string>
    <string name="preview">Preview</string>
    <string name="anti_theft_text_before">Opening text</string>
    <string name="anti_theft_text_before_summary">Displayed before the contact information.</string>
    <string name="anti_theft_text_after">Ending text</string>
    <string name="anti_theft_text_after_summary">Displayed after the contact information.</string>
    <string name="anti_theft_type_message">Type text</string>
    <string name="anti_theft_contact_information">Contact information</string>
    <string name="anti_theft_contact_information_summary">Type contact information</string>
    <string name="anti_theft_user_not_changed">No changes were made to your Google account</string>
    <string name="anti_theft_title_toggle_preference">Device Locator</string>
    <string name="anti_theft_dialog_title_findR_preference">Please enter your Google account</string>
    <string name="anti_theft_welcome_group">You’re registered!</string>
    <string name="remote_management_registering_end">"Please check your email for additional instructions.

Note: Your device’s location services have been activated to allow Anti-Theft to work."</string>
    <string name="anti_theft_fail_welcome_group">Sorry but we were unable to register you with that email address. Please try again</string>
    <string name="scan_result">Scan Results</string>
    <string name="files_were_scanned">Files scanned</string>
    <string name="suspicious_files_were_found">Suspicious files found</string>
    <string name="file_scanner">File Scanner</string>
    <string name="file_scanner_sum">Scan files for malicious content</string>
    <string name="enter_unlock_password">Please enter unlock password</string>
    <string name="you_are_updated">You have the latest updates installed</string>
    <string name="delete">Delete</string>
    <string name="app_locker">App Locker</string>
    <string name="app_locker_sum">Protect your apps with a password</string>
    <string name="app_locker_selection_saved">Selection Saved</string>
    <string name="app_locker_password">Please enter your password</string>
    <string name="enter_serial">Please create a password to begin using App Locker</string>
    <string name="enter_serial_again">Retype password:</string>
    <string name="AppLocker_title">App Locker</string>
    <string name="app_locker_enter_empty">Password:</string>
    <string name="app_locker_password_not_match">Passwords do not match. Please retype.</string>
    <string name="wrong_password">Oops! Incorrect password. Please try again.</string>
    <string name="app_locker_password_empty">Please retype your password</string>
    <string name="app_locker_all_passwords_empty">Please type your password</string>
    <string name="password">Change password</string>
    <string name="activate_timer">Activate timer</string>
    <string name="deactivate_timer">Deactivate timer</string>
    <string name="app_locker_timer_off_toast">Unlock timer is OFF</string>
    <string name="app_locker_timer_on_toast">5-min unlock timer is ON</string>
    <string name="app_locker_label_type_email">Enter your email for password recovery (optional):</string>
    <string name="block_app_locker_recover_password_hyper_link">Tap here to recover your password</string>
    <string name="block_app_locker_email_address_not_valid">Oops! Invalid address. Please try again.</string>
    <string name="block_app_password_sent_to_mail">Your password has been emailed to you.</string>
    <string name="app_locker_password_recovery_no_net">"Please make sure you're connected to the Internet"</string>
    <string name="app_locker_password_bad_message">Oops! Wrong password. Please try again.</string>
    <string name="app_locker_select_all_header">Please select which app(s) to lock</string>
    <string name="app_locker_select_all">All Apps</string>
    <string name="app_locker_set_password">Set Password</string>
    <string name="app_locker_expired_title">App Locker Trial Expired</string>
    <string name="app_locker_expired_sub_title">Your trial of App Locker has expired.</string>
    <string name="app_locker_expired_body">"Don't miss out! Keep your apps locked by upgrading to AntiVirus PRO."</string>
    <string name="app_locker_expired_button_no">No Thanks</string>
    <string name="app_locker_expired_button_upgrade">Upgrade</string>
    <string name="app_locker_multi_block_toast">You might lock other related applications</string>
    <string name="app_locker_change_pwd_title">Please enter your new password.</string>
    <string name="title_task_killer_preference">Task Killer</string>
    <string name="summary_task_killer_preference">Close unused apps</string>
    <string name="avg_title">AVG Technologies</string>
    <string name="avg_summary">Get award-winning security software for your PC</string>
    <string name="summary_app_backup_preference">Back up installed apps to SD card</string>
    <string name="title_app_backup_preference">App Backup</string>
    <string name="backuprestoretab_backup_tab_header">Backup</string>
    <string name="backuprestoretab_restore_tab_header">Restore</string>
    <string name="backupactivity_title_sdcard">Available space on SD card:</string>
    <string name="backupactivity_title_no_sdcard">SD card not available</string>
    <string name="backupactivity_dialog_app_back_backup_requires">Backup requires:</string>
    <string name="backupactivity_dialog_app_back_free_on_sdcard">"
Free space on SD card:"</string>
    <string name="backupactivity_progess_dialog_backup_in_progress">Backup in progress...</string>
    <string name="backupactivity_dialog_app_not_enough">"Sorry, there's not enough space on your SD card
"</string>
    <string name="backupactivity_dialog_app_requires">Space required for backup:</string>
    <string name="backupactivity_dialog_app_back_will_cancel">"
Backup canceled"</string>
    <string name="backupactivity_button_backup_now">Backup</string>
    <string name="restoreactivity_progess_dialog_restore_in_progress">Restore in progress...</string>
    <string name="restoreactivity_button_restore_now">Restore</string>
    <string name="restoreactivity_dialog_menu_title">App Restore</string>
    <string name="restoreactivity_dialog_menu_delete">Delete</string>
    <string name="restoreactivity_dialog_menu_delete_restore_all">Restore all</string>
    <string name="localwipe_buttun_wipe">Wipe</string>
    <string name="summary_toggle_preference_pre">Use location-based services to locate your device using Google Maps™.</string>
    <string name="antivirus_warning">[appname] Alert</string>
    <string name="app_killed">App killed.</string>
    <string name="memory_loading">Loading...</string>
    <string name="license_scan_qr">Scan QR code</string>
    <string name="usage">Usage</string>
    <string name="current_license">Current license:</string>
    <string name="anti_theft_intro">By registering for our Anti-Theft service now you can:</string>
    <string name="anti_theft_intro1">Locate your device using Google Maps™</string>
    <string name="anti_theft_intro2">Remotely lock your device</string>
    <string name="anti_theft_intro3">Remotely wipe personal data from your device</string>
    <string name="anti_theft_intro4">To register, please fill in your Google account details.</string>
    <string name="anti_theft_get_updates">Get updates on new versions and security threats</string>
    <string name="anti_theft_register">Register</string>
    <string name="how_to_use">AVG Anti-Theft can help you find your device remotely if it’s lost or stolen. You can do this at www.avgmobilation.com using your Google account details or by using these commands which you can send from another mobile by using the password below:</string>
    <string name="how_to_sms_commands">Text messages (SMS) commands</string>
    <string name="how_to_scream_desc">Have your device sound an alarm, even if it is on silent, send:</string>
    <string name="how_to_scream">ScreamMyPhone [password]</string>
    <string name="how_to_locate_desc">To locate the device, send:</string>
    <string name="how_to_locate">LocateMyPhone [password]</string>
    <string name="how_to_lock_desc">To lock the device, send:</string>
    <string name="how_to_lock">LockMyPhone [password]</string>
    <string name="how_to_unlock_desc">To unlock the device, send:</string>
    <string name="how_to_unlock">UnLockMyPhone [password]</string>
    <string name="how_to_web_console">Web console</string>
    <string name="how_to_web_console_desc">"Go to www.avgmobilation.com using your PC browser.
Log on using your Google account and follow the instructions."</string>
    <string name="traffic_usage_count_off">Usage count off</string>
    <string name="traffic_usage_count_on">Usage count on</string>
    <string name="widgetSettings">Widget Settings</string>
    <string name="widgetUserInstruction">Customize the widget by tapping the buttons below</string>
    <string name="widgetSettingsSave">Save</string>
    <string name="image_description">Sample</string>
</resources>