<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/how_to_use" style="@style/TextGreyMedium" />
        <LinearLayout android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
        <TextView android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/how_to_sms_commands" style="@style/TextWhiteLarge" />
        <TextView android:id="@id/textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/how_to_scream_desc" style="@style/TextGreyMedium" />
        <TextView android:id="@id/tv_scream" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/how_to_scream" style="@style/TextOrangeLargeItalic" />
        <TextView android:id="@id/textView5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/how_to_locate_desc" style="@style/TextGreyMedium" />
        <TextView android:id="@id/tv_locate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/how_to_locate" style="@style/TextOrangeLargeItalic" />
        <TextView android:id="@id/textView7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/how_to_lock_desc" style="@style/TextGreyMedium" />
        <TextView android:id="@id/tv_lock" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/how_to_lock" style="@style/TextOrangeLargeItalic" />
        <TextView android:id="@id/textView9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/how_to_unlock_desc" style="@style/TextGreyMedium" />
        <TextView android:id="@id/tv_unlock" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/how_to_unlock" style="@style/TextOrangeLargeItalic" />
        <LinearLayout android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
        <TextView android:id="@id/textView11" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/how_to_web_console" style="@style/TextWhiteLarge" />
        <TextView android:id="@id/textView12" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/how_to_web_console_desc" style="@style/TextGreyMedium" />
    </LinearLayout>
</ScrollView>