<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/btn_register">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/anti_theft_intro" style="@style/TextWhiteLarge" />
            <TableLayout android:id="@id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip">
                <TableRow android:gravity="center_vertical" android:id="@id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/bullet" />
                    <TextView android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anti_theft_intro1" android:layout_weight="1.0" style="@style/TextGreyMedium" />
                </TableRow>
                <TableRow android:gravity="center_vertical" android:id="@id/tableRow2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/bullet" />
                    <TextView android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anti_theft_intro2" android:layout_weight="1.0" style="@style/TextGreyMedium" />
                </TableRow>
                <TableRow android:gravity="center_vertical" android:id="@id/tableRow3" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/bullet" />
                    <TextView android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anti_theft_intro3" android:layout_weight="1.0" style="@style/TextGreyMedium" />
                </TableRow>
            </TableLayout>
            <TextView android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/anti_theft_intro4" style="@style/TextGreyMedium" />
            <EditText android:id="@id/et_mail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_weight="1.0" android:inputType="textEmailAddress" />
            <CheckBox android:id="@id/cb_get_updates" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anti_theft_get_updates" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/btn_register" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/anti_theft_register" android:layout_alignParentBottom="true" />
</RelativeLayout>