<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/logoLayout" android:background="@drawable/tool_bar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/headerButton" android:background="@drawable/app_landing_actionbar_avg_free" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/ImageButtonHolo" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/userGreetings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/logoLayout">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/widget_settings_icon" android:contentDescription="@string/image_description" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widgetSettings" style="@style/TextWhiteLarge" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widgetUserInstruction" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/mainWidgetConfigLayout" android:background="@drawable/widget_configuration_background_shape" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="4.0dip" android:layout_below="@id/userGreetings">
        <TextView android:gravity="center_horizontal" android:id="@id/configItem0" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25" />
        <ImageView android:background="#ff495c65" android:layout_width="1.0dip" android:layout_height="fill_parent" android:contentDescription="@string/image_description" />
        <TextView android:gravity="center_horizontal" android:id="@id/configItem1" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25" />
        <ImageView android:background="#ff495c65" android:layout_width="1.0dip" android:layout_height="fill_parent" android:contentDescription="@string/image_description" />
        <TextView android:gravity="center_horizontal" android:id="@id/configItem2" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25" />
        <ImageView android:background="#ff495c65" android:layout_width="1.0dip" android:layout_height="fill_parent" android:contentDescription="@string/image_description" />
        <TextView android:gravity="center_horizontal" android:id="@id/configItem3" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25" />
    </LinearLayout>
    <ListView android:id="@id/configurationList" android:background="@drawable/widget_config_list_shape" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="10.0dip" android:layout_above="@id/saveButton" android:layout_below="@id/mainWidgetConfigLayout" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/saveButton" android:background="@drawable/btn_blue_holo_dark" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/widgetSettingsSave" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>