<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/memory_use" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/action_bar" />
    <RelativeLayout android:orientation="vertical" android:id="@id/bottom_traffic_bar" android:background="@color/black" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/header">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/linearLayout3" android:background="@color/battery_state_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TableLayout android:id="@id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TableRow android:id="@id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip">
                    <TextView android:id="@id/tv_traffic_usage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/usage" style="@style/ListItemBodyLight" />
                    <FrameLayout android:id="@id/frameLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_weight="1.0">
                        <ProgressBar android:id="@id/pb_traffic_green" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal" />
                        <ProgressBar android:id="@id/pb_traffic_orange" android:layout_width="fill_parent" android:layout_height="wrap_content" android:progressDrawable="@drawable/progress_horizontal_orange" style="?android:attr/progressBarStyleHorizontal" />
                        <ProgressBar android:id="@id/pb_traffic_red" android:layout_width="fill_parent" android:layout_height="wrap_content" android:progressDrawable="@drawable/progress_horizontal_red" style="?android:attr/progressBarStyleHorizontal" />
                        <TextView android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/tv_traffic_stats" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" style="@style/ProgressText" />
                        <TextView android:gravity="right|center" android:layout_gravity="center_vertical" android:id="@id/tv_traffic_total" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/ProgressText" />
                    </FrameLayout>
                </TableRow>
            </TableLayout>
            <TextView android:id="@id/tv_time_until" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="4" style="@style/TextGreySmall" />
        </LinearLayout>
    </RelativeLayout>
    <TextView android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:layout_below="@id/bottom_traffic_bar" style="@style/ListItemBody" />
    <LinearLayout android:id="@id/ll_separator" android:background="@drawable/separator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tv_title" />
    <ProgressBar android:id="@id/apps_progress_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="133.0dip" android:layout_centerInParent="true" style="?android:attr/progressBarStyleSmall" />
    <TextView android:id="@id/tv_loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/memory_loading" android:layout_below="@id/apps_progress_bar" android:layout_centerHorizontal="true" style="@style/ListItemBody" />
    <ListView android:id="@id/lv_apps" android:paddingBottom="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/bottom_action_bar" android:background="@color/bottom_btn_bg" android:padding="0.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:layout_alignParentBottom="true">
        <ToggleButton android:textColor="@color/white" android:id="@id/tbtn_data_plan" android:background="@drawable/btn_toggle_holo_dark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textOn="@string/traffic_usage_count_on" android:textOff="@string/traffic_usage_count_off" style="@style/WidgetHoloButtonToggle" />
    </RelativeLayout>
</RelativeLayout>